@@ -1,3 +1,8 @@
+2008-04-14  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidLongParameterListsRule.cs: Handle constructors just like 
+	methods.
+
 2008-04-14  Nestor Salceda  <nestor.salceda@gmail.com>
 
 	* CodeDuplicatedLocator.cs: Improved the defect reporting.  When the
